force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Long_Name__c</fullName>
    <description>Full Name of the condition</description>
    <inlineHelpText>Précisez le libellé complet de la condition</inlineHelpText>
    <label>Long Name</label>
    <type>TextArea</type>
</CustomField>