force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Name_Leg__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Name_Leg__c</fullName>
    <description>Legal name of the condiion</description>
    <inlineHelpText>Précisez le nom de la condition tel qu&apos;il doit apparaître dans les documents légaux</inlineHelpText>
    <label>Company legal name</label>
    <type>TextArea</type>
</CustomField>