force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Original_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Original_Name__c</fullName>
    <label>Original Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>