force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Parent_Condition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Parent_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Condition</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Parent_Condition__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.Negoptim__Nego_Discount_Type__c</field>
            <operation>equals</operation>
            <valueField>Negoptim__Pol_Com_Condition__c.Negoptim__Nego_Discount_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Negoptim__Pol_Com_Condition__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Main Term</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Pol_Com_Condition__c</referenceTo>
    <relationshipLabel>Conditions Tarifaires</relationshipLabel>
    <relationshipName>Pol_Com_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>