force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_API_Link__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_API_Link__c</fullName>
    <label>Counterparty API Link</label>
    <type>Url</type>
</CustomField>