force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_BU__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busniess Unit that will execute the counterparts</description>
    <inlineHelpText>Sélectionnez la business unit responsable de la contrepartie</inlineHelpText>
    <label>Counterparty Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Set_Com_Condition_Proof_Counterparty_BU__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Policy - Tariff Conditions</relationshipLabel>
    <relationshipName>Policy_Tariff_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>