force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_captation_Process__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_captation_Process__c</fullName>
    <defaultValue>&quot;Describe here the process for counterpart execution&quot;</defaultValue>
    <description>Describe the process for the counterpart execution.</description>
    <inlineHelpText>Describe the process for the counterpart execution.</inlineHelpText>
    <label>Counterparty Captation Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>