force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_definition__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_definition__c</fullName>
    <defaultValue>&quot;Define here the counterpart criteria&quot;</defaultValue>
    <description>Give the description of the counterpart.</description>
    <inlineHelpText>Décrire la contrepartie à rendre</inlineHelpText>
    <label>Counterparty definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>