force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_owner__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dedicated user owner for this counterpart process execution.</description>
    <inlineHelpText>Dedicated user owner for this counterpart process execution.</inlineHelpText>
    <label>Counterparty Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policy_Tariff_Conditions1</relationshipName>
    <type>Lookup</type>
</CustomField>