force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_ownership__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_ownership__c</fullName>
    <defaultValue>&quot;Specify here how will honor the counterpart&quot;</defaultValue>
    <description>Describe the how will exceute &amp; share the counterpart.</description>
    <inlineHelpText>Describe the how will exceute &amp; share the counterpart.</inlineHelpText>
    <label>Counterparty Ownership</label>
    <type>TextArea</type>
</CustomField>