force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_period__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_period__c</fullName>
    <label>Counterparty Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad&apos;hoc</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quaterly</fullName>
            </value>
            <value>
                <fullName>Once a Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>