force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_requested__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The condition request a counterpart</description>
    <inlineHelpText>A cocher si un nombre d&apos;opérations est obligatoire à la saisie de l&apos;accord</inlineHelpText>
    <label>Counterparty (Y/N)</label>
    <type>Checkbox</type>
</CustomField>