force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Proof_counterparty_type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Proof_counterparty_type__c</fullName>
    <description>Select the counterparty type targeting for this condition line.</description>
    <inlineHelpText>Select the counterparty type targeting for this condition line.</inlineHelpText>
    <label>Counterparty Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Proof_counterparty_type</valueSetName>
    </valueSet>
</CustomField>