force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Rank_Order__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Rank_Order__c</fullName>
    <label>Rank Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>