force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Segmentation_attribut2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Segmentation_attribut2__c</fullName>
    <label>Segmentation attribut2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Segmentation_attribut2</valueSetName>
    </valueSet>
</CustomField>