force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__SetCommercialPlanDetail1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SetCommercialPlanDetail1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Commercial Plan Detail1</label>
    <type>Checkbox</type>
</CustomField>