force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Specific_Contract_Type_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Specific_Contract_Type_Authorization__c</fullName>
    <label>Specific Contract Type Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Period Extension</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Negotiation + Amendment</fullName>
            </value>
            <value>
                <fullName>All - Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>