force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_BDate__c</fullName>
    <label>Status Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>