force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Status_EDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_EDate__c</fullName>
    <label>Status Ending Date</label>
    <type>Date</type>
</CustomField>