force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Supply_flow__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supply_flow__c</fullName>
    <description>Specify the type of supply flow should be consdered by the agreement / condition</description>
    <inlineHelpText>Filtre le code budget selon le flux logistique défini au niveau du Nego Scope. Si vide = tous circuits (DDD + Entrepôts).</inlineHelpText>
    <label>Supply flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct to Store</fullName>
            </value>
            <value>
                <fullName>To Warehouse</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>