force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Support_Date__c</fullName>
    <description>Last date for Support intervention on the row.</description>
    <inlineHelpText>Dernière date de modification de la condition</inlineHelpText>
    <label>Last Support Date</label>
    <type>DateTime</type>
</CustomField>