force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/fields/Negoptim__VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VAT_Type__c</fullName>
    <description>Define the VAT type that should be considered for the condition invoicing</description>
    <inlineHelpText>Sélectionnez le type de TVA de la condition</inlineHelpText>
    <label>VAT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>