force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/recordTypes/Negoptim__Main_Term.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Main_Term</fullName>
    <active>true</active>
    <description>Define the main condition for the contract</description>
    <label>Main Term</label>
</RecordType>