force-app/main/default/objects/Negoptim__Pol_Com_Condition__c/recordTypes/Negoptim__Sub_Term.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Sub_Term</fullName>
    <active>true</active>
    <description>Define the sub condition linked to a main condition for the contract</description>
    <label>Sub Term</label>
</RecordType>